force-app/main/default/objects/Customer_Entitlement__c/Customer_Entitlement__c.object-meta.xml
<CustomObject>
    <description>Durable, already-aggregated record of what a customer is entitled to. Named to avoid colliding with the standard Service Cloud Entitlement object, which is not used here.</description>
    <label>Customer Entitlement</label>
    <nameField>
        <label>Entitlement</label>
        <displayFormat>ENT-{000000}</displayFormat>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Customer Entitlements</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>