force-app/main/default/objects/Customer_Entitlement__c/fields/Metering_Type__c.field-meta.xml
<CustomField>
    <fullName>Metering_Type__c</fullName>
    <label>Metering Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
                <value>
                    <fullName>Binary</fullName>
                </value>
                <value>
                    <fullName>Metered</fullName>
                </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>